--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <nav>
             <img src="./Images/Logo.svg" alt="Logo">
+            <p><i class="fa-solid fa-bars-staggered"></i>Kurslar</p>
         </nav>
     </header>
 </body>
