--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <nav>
-            <img src="./Images/Logo.svg" alt="Logo">
-            <p><i class="fa-solid fa-bars-staggered"></i>Kurslar</p>
+            <div class="navFirst">
+                <img src="./Images/Logo.svg" alt="Logo">
+                <p><i class="fa-solid fa-bars-staggered"></i>Kurslar</p>
+            </div>
+        </div>
         </nav>
     </header>
 </body>
