--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <img src="./Images/Logo.svg" alt="Logo">
                 <p><i class="fa-solid fa-bars-staggered"></i>Kurslar</p>
             </div>
+            <div class="navSecond">
+                <p><i class="fa-regular fa-heart"></i>İstək Siyahısı</p>
+                <a href="#"><i class="fa-solid fa-door-open"></i> Daxil ol</a>
+            </div>
         </div>
         </nav>
     </header>
