--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <nav>
             <div class="navFirst">
                 <img src="./Images/Logo.svg" alt="Logo">
-                <p><i class="fa-solid fa-bars-staggered"></i>Kurslar</p>
+                <a href="#"><i class="fa-solid fa-bars-staggered"></i>Kurslar</a>
             </div>
             <div class="navSecond">
-                <p><i class="fa-regular fa-heart"></i>İstək Siyahısı</p>
+                <p><i class="fa-regular fa-heart"></i>  İstək Siyahısı</p>
                 <a href="#"><i class="fa-solid fa-door-open"></i> Daxil ol</a>
+                <a class="registerBtn" href="#"><i class="fa-regular fa-pen-to-square"></i>  Qeydiyyatdan keç</a>
             </div>
         </div>
         </nav>
