--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
         </div>
         </nav>
     </header>
+    <main>
+        <div class="sectionOne">
+           <div class="part1">
+            <h1><span>Proqramlaşdırmanı</span>
+                onlayn olaraq
+                bizdən öyrənin</h1>
+                <a href="#">Kurslar  <i class="fa-solid fa-chevron-right"></i></a>
+           </div>
+        </div>
+    </main>
 </body>
 </html>
