Add some Sections

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 bizdən öyrənin</h1>
                 <a href="#">Kurslar  <i class="fa-solid fa-chevron-right"></i></a>
            </div>
+           <div class="part2">
+            <img src="./Images/sectionOne.png" alt="">
+           </div>
         </div>
     </main>
 </body>
