--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
     <main>
         <div class="sectionOne">
            <div class="part1">
-            <h1><span>Proqramlaşdırmanı</span>
-                onlayn olaraq
-                bizdən öyrənin</h1>
-                <a href="#">Kurslar  <i class="fa-solid fa-chevron-right"></i></a>
+                <div class="container">
+
+                    <h1><span>Proqramlaşdırmanı</span>
+                        onlayn olaraq
+                        bizdən öyrənin</h1>
+                        <a href="#">Kurslar  <i class="fa-solid fa-chevron-right"></i></a>
+                    </div>
+        
            </div>
            <div class="part2">
             <img src="./Images/sectionOne.png" alt="">
            </div>
         </div>
     </main>
+
 </body>
 </html>
