--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./Styles/style.css">
 </head>
 <body>
+   <div class="bgImg">
     <header>
         <div class="container">
         <nav>
@@ -40,6 +41,23 @@
            </div>
         </div>
     </main>
+   </div>
 
+
+
+   <div class="container">
+    <div class="cards">
+            <div class="cardHeader">
+                <h2>Populyar Kurslar</h2>
+
+               <div class="headerBtn">
+                <a href="#">Hamısı</a>
+                <a href="#">Frontend</a>
+                <a href="#">Backend</a>
+                <a href="#">UI/UX</a>
+               </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
