--- a/index.html
+++ b/index.html
@@ -57,6 +57,37 @@
                 <a href="#">UI/UX</a>
                </div>
             </div>
+
+           <div class="cardsMenu">
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+            <div class="card">
+                <img src="./Images/card1.png" alt="">
+            </div>
+           </div>
         </div>
     </div>
 </body>
