--- a/index.html
+++ b/index.html
@@ -63,32 +63,98 @@
                 <img src="./Images/card1.png" alt="">
                 <div class="cardTitles">
                     <p class="cardTitle">Frontend</p>
-                <p class="cardTime"><i class="fa-regular fa-circle-play"></i></p>
-                </div>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
+            </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
             </div>
             <div class="card">
                 <img src="./Images/card1.png" alt="">
+                <div class="cardTitles">
+                    <p class="cardTitle">Frontend</p>
+                <p class="cardTime"><i class="fa-regular fa-circle-play"></i> 18 dərs</p>
             </div>
-           </div>
-        </div>
+            <hr>
+            <div class="cardText">
+                <p>Lorem ipsum dolor sit amet.</p>
+                <i class="fa-solid fa-play"></i>
+            </div>
+            </div>
     </div>
 </body>
 </html>
